i18n/en/docusaurus-plugin-content-docs/version-3.1.0/readme.mdx
---
title: Read Me
slug: /
---

import DocCard from '@theme/DocCard';

This documentation aims to explain how RaidProtect works. Feel free to send us your feedback so we can improve it.
Don't forget to [join our Discord server](https://raidprotect.bot/discord) to stay informed about the latest updates on the project. You can also contact our support team who will answer your questions about using the bot. 😄

## 🚀 Getting Started with RaidProtect {#start}

To start using RaidProtect, simply invite it to your server using the following link.

<DocCard item={{ type: 'link', href: 'https://raidprotect.bot/invite', label: 'Invite RaidProtect' }} />
<br />

:::danger
Warning, **copies of the bot** are circulating **using the name RaidProtect**, only invite it from our official website.
:::

### Requirements {#requirement}

To ensure the proper functioning of RaidProtect:
1. **Grant the Administrator permission** to RaidProtect. This allows it to automatically moderate all your channels.
2. **Place its role at the same level as your server administrators**. The permission system does not allow RaidProtect to sanction users with a role above it.

### Installation {#install}

Once RaidProtect is added to your server, run the [`/setup`](./setup.md#install) command.

<DocCard item={{ type: 'link', href: '/setup', docId: 'setup', label: 'Guided Installation' }} />
<br />

:::note
For the less adventurous (or the more impatient), you can simply read the instructions of the [`/setup`](./setup.md#advanced) command which summarizes the main information of each feature.
:::

### Usage {#use}

Check out the different sections of this documentation to discover all the features offered by RaidProtect.

<DocCard item={{ type: 'link', href: '/language', docId: 'language', label: 'Available Languages' }} />
<br />
<DocCard item={{ type: 'category', href: '/features', label: 'Features', description: 'Documentation for each of our features.' }} />
<br />
<DocCard item={{ type: 'category', href: '/guides', label: 'Our Guides', description: 'Guides to help you the best way possible.' }} />
<br />
<DocCard item={{ type: 'category', href: '/useful-links', label: 'Useful Links', description: 'Various useful links for RaidProtect.' }} />
<br />
